--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,55 +5,67 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/water_background_color">
 
     <TextView
         android:id="@+id/titleText"
+        style="@style/titleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="#2196F3"
-        android:shadowColor="#808080"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="3"
-        android:padding="10dp"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/reminder_time_spinner"
+        style="@style/spinnerStyle"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:entries="@array/reminder_time"
         app:layout_constraintTop_toBottomOf="@+id/titleText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/set_reminder_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/btn_set_reminder"
         app:layout_constraintTop_toBottomOf="@id/reminder_time_spinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/cancel_reminder_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/buttonStyle"
         android:text="@string/btn_cancel_reminder"
         app:layout_constraintTop_toBottomOf="@id/set_reminder_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_credits_for_developer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/creditsDeveloperTextStyle"
+        android:text="@string/tv_credits_developer"
+        app:layout_constraintBottom_toTopOf="@id/tv_credits_for_background_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_credits_for_background_image"
+        style="@style/creditsBackgroundTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_credits_background_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
