--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="titleStyle" parent="TextAppearance.AppCompat.Headline">
-        <item name="android:textSize">40sp</item>
+    <style name="titleStyle">
+        <item name="android:textSize">50sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#1b3763</item>
         <item name="android:shadowColor">#CCCCCC</item>
@@ -13,21 +13,22 @@
         <item name="android:fontFamily">@font/merriweather</item>
     </style>
 
-    <style name="buttonStyle" parent="Widget.AppCompat.Button">
+    <style name="buttonStyle">
         <item name="android:backgroundTint">#1b3763</item>
-        <item name="android:textColor">#333333</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:padding">18dp</item>
         <item name="android:layout_margin">12dp</item>
         <item name="android:elevation">4dp</item>
     </style>
 
-    <style name="spinnerStyle" parent="Widget.AppCompat.Spinner">
+    <style name="spinnerStyle">
         <item name="android:layout_marginTop">25dp</item>
         <item name="android:backgroundTint">#1b3763</item>
         <item name="android:popupBackground">#bbd4fc</item>
     </style>
 
-    <style name="creditsDeveloperTextStyle" parent="TextAppearance.AppCompat.Body1">
+    <style name="creditsDeveloperTextStyle">
+        <item name="android:textSize">17sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#1b3763</item>
         <item name="android:shadowColor">#CCCCCC</item>
@@ -36,7 +37,8 @@
         <item name="android:shadowRadius">2</item>
     </style>
 
-    <style name="creditsBackgroundTextStyle" parent="TextAppearance.AppCompat.Body1">
+    <style name="creditsBackgroundTextStyle">
+        <item name="android:textSize">17sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#1b3763</item>
         <item name="android:shadowColor">#CCCCCC</item>
